# transact

./: .dockerignore  .env  .gitignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Jenkinsfile  MAINTAINERS.md  README.md  RELEASE_NOTES.md  docker-compose-installed.yaml  docker-compose.yaml  justfile
docker/: lint  (+3 more)
example/intkey_multiply/processor/: Cargo.toml  Dockerfile  Dockerfile-scar  build.rs
example/intkey_multiply/processor/packaging/scar/: manifest.yaml
example/intkey_multiply/processor/src/: handler.rs  main.rs
examples/address_generator/: Cargo.toml
examples/address_generator/src/: main.rs
examples/simple_key_xo/: Cargo.toml
examples/simple_key_xo/src/: main.rs
examples/simple_xo/: Cargo.toml
examples/simple_xo/src/: main.rs
integration/: Cargo.toml  Dockerfile  sabre_test.yaml
integration/payloads/: A_Bad_C_payload  create_org
integration/src/: main.rs
integration/tests/: test_sabre.rs
libtransact/: Cargo.toml  build.rs
libtransact/protos/: batch.proto  command.proto  events.proto  key_value_state.proto  merkle.proto  sabre.proto  sabre_namespace_registry.proto  sabre_payload.proto  transaction.proto  transaction_receipt.proto
libtransact/src/: batch.rs  lib.rs  protos.rs  receipts.rs  sawtooth.rs  transaction.rs
libtransact/src/collections/: mod.rs  ref_map.rs
libtransact/src/context/: error.rs  manager.rs  mod.rs
libtransact/src/context/manager/: mod.rs  sync.rs
libtransact/src/context/manager/thread/: core.rs  error.rs  mod.rs
libtransact/src/contract/: handler.rs  mod.rs
libtransact/src/contract/address/: double_key_hash.rs  error.rs  key_hash.rs  mod.rs  triple_key_hash.rs
libtransact/src/contract/archive/: error.rs  mod.rs
libtransact/src/contract/context/: error.rs  key_value.rs  mod.rs
libtransact/src/database/: btree.rs  error.rs  lmdb.rs  lmdb_ffi.rs  mod.rs  redis.rs  sqlite.rs
libtransact/src/error/: internal.rs  invalid_state.rs  mod.rs
libtransact/src/execution/: executer.rs  executer_internal.rs  executor_internal.rs  mod.rs
libtransact/src/execution/adapter/: error.rs  mod.rs  static_adapter.rs  test_adapter.rs
libtransact/src/execution/executor/: error.rs  internal.rs  mod.rs  reader.rs
libtransact/src/families/: command.rs  mod.rs  smallbank.rs  xo.rs
libtransact/src/families/command/: handler.rs  mod.rs  transaction_builder.rs
libtransact/src/families/command/workload/: command_iter.rs  mod.rs  playlist.rs
libtransact/src/families/sabre/: addressing.rs  handler.rs  mod.rs  payload.rs  state.rs
libtransact/src/families/sabre/admin/: allow_all.rs  mod.rs  settings.rs
libtransact/src/families/sabre/wasm_executor/: mod.rs  wasm_externals.rs  wasm_module.rs
libtransact/src/families/smallbank/: handler.rs  mod.rs
libtransact/src/families/smallbank/workload/: error.rs  mod.rs  playlist.rs
libtransact/src/handler/: error.rs  mod.rs  sabre.rs
libtransact/src/protocol/: batch.rs  command.rs  key_value_state.rs  mod.rs  receipt.rs  sabre.rs  smallbank.rs  transaction.rs
libtransact/src/protocol/sabre/: mod.rs  payload.rs  state.rs
libtransact/src/scheduler/: mod.rs  tree.rs
libtransact/src/scheduler/multi/: core.rs  mod.rs  shared.rs
libtransact/src/scheduler/parallel/: mod.rs  tree.rs
libtransact/src/scheduler/serial/: core.rs  execution.rs  mod.rs  shared.rs
libtransact/src/signing/: error.rs  hash.rs  mod.rs  ursa.rs
libtransact/src/state/: change_log.rs  committer.rs  dry_run_committer.rs  error.rs  hashmap.rs  merkle.rs  merkle_error.rs  mod.rs  pruner.rs  reader.rs  state_trait.rs
libtransact/src/state/merkle/: change_log.rs  error.rs  mod.rs  node.rs
libtransact/src/state/merkle/kv/: change_log.rs  error.rs  mod.rs
libtransact/src/state/merkle/kv/state_trait_impls/: committer.rs  dry_run_committer.rs  mod.rs  pruner.rs  reader.rs
libtransact/src/state/merkle/sql/: cache.rs  error.rs  mod.rs  postgres.rs  schema.rs  sqlite.rs
libtransact/src/state/merkle/sql/backend/: mod.rs  postgres.rs  sqlite.rs
libtransact/src/state/merkle/sql/migration/: mod.rs
libtransact/src/state/merkle/sql/migration/postgres/: mod.rs
libtransact/src/state/merkle/sql/migration/postgres/migrations/2021-06-30-121000-initialize-tables/: down.sql  up.sql
libtransact/src/state/merkle/sql/migration/postgres/migrations/2021-07-29-105100-change-log/: up.sql
libtransact/src/state/merkle/sql/migration/postgres/migrations/2021-08-18-drop-indexes/: down.sql  up.sql
libtransact/src/state/merkle/sql/migration/sqlite/: mod.rs
libtransact/src/state/merkle/sql/models/: mod.rs  postgres.rs  sqlite.rs
libtransact/src/state/merkle/sql/operations/: get_leaves.rs  get_or_create_tree.rs  get_path.rs  get_tree_by_name.rs  has_root.rs  insert_nodes.rs  list_leaves.rs  mod.rs  prune_entries.rs  update_change_log.rs  update_index.rs
libtransact/src/state/merkle/sql/store/: mod.rs  postgres.rs  schema.rs  sqlite.rs
libtransact/src/state/merkle/sql/store/models/: mod.rs  postgres.rs  sqlite.rs
libtransact/src/state/merkle/sql/store/operations/: delete_tree.rs  get_leaves.rs  get_or_create_tree.rs  get_path.rs  get_tree_by_name.rs  has_root.rs  insert_nodes.rs  list_leaves.rs  list_trees.rs  mod.rs  prepared_stmt.rs  prune_entries.rs  remove_pruned_entries.rs  update_change_log.rs  write_changes.rs
libtransact/src/workload/: batch_gen.rs  command.rs  error.rs  mod.rs  runner.rs  source.rs  xo.rs
libtransact/src/workload/batch_reader/: mod.rs  protobuf.rs
libtransact/src/workload/transaction_reader/: mod.rs  protobuf.rs
libtransact/tests/: mod.rs  state.rs
libtransact/tests/state/: merkle.rs  mod.rs
libtransact/tests/state/merkle/: btree.rs  lmdb.rs  mod.rs  redisdb.rs  sql_postgres.rs  sql_sqlite.rs  sqlitedb.rs
tp/: Cargo.toml  Dockerfile  Dockerfile-installed  Dockerfile-installed-bionic  Dockerfile-installed-xenial  build.rs
tp/packaging/systemd/: sawtooth-sabre  sawtooth-sabre.service
tp/src/: addressing.rs  handler.rs  lib.rs  main.rs  payload.rs  state.rs
tp/src/admin/: allow_all.rs  mod.rs  settings.rs
tp/src/wasm_executor/: mod.rs  wasm_externals.rs  wasm_module.rs
(+150 files in other folders)
