[workspace]
members = [
  "libtransact",
  "examples/simple_xo",
  "examples/address_generator",
  "examples/sabre_command_executor",
  "cli"
  ]

# Exclude sabre_smallbank and sabre_command to avoid incompatible features
# `sabre-compat` and `log`
exclude = ["examples/sabre_smallbank", "examples/sabre_command"]
