# Copyright 2018-2019 Bitwise IO, Inc.
# Copyright 2019-2021 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "transact"
version = "0.3.7"
authors = ["Bitwise IO, Inc.", "Cargill Incorporated"]
edition = "2018"
license = "Apache-2.0"
readme = "../README.md"
description = """\
    Transact is a transaction execution platform designed to be used as \
    a library or component when implementing distributed ledgers, including \
    blockchains.
"""
repository = "http://github.com/hyperledger/transact"

[dependencies]
bzip2 = { version = "0.3", optional = true }
cbor-codec = { version = "0.7", optional = true }
chrono = { version = "0.4", optional = true }
cylinder = { version = "0.2", optional = true }
glob = { version = "0.3", optional = true }
hex = "0.3"
libc = ">=0.2.35"
lmdb-zero = { version = ">=0.4.1", optional = true }
log = { version = "0.4", optional = true, features = ["std"] }
openssl = { version = "0.10", optional = true }
protobuf = "2.19"
r2d2 = { version = "0.8", optional = true }
r2d2_sqlite = { version = "0.15", optional = true }
rand = "0.6"
rand_hc = { version = "0.1", optional = true }
redis = { version = "0.13.0", default-features = false, optional = true }
reqwest = { version = "0.10", features = ["blocking", "json"], optional = true}
rusqlite = { version = "0.22", optional = true }
sabre-sdk = { version ="0.7.1", optional = true }
sawtooth-sdk = { version = "0.5", optional = true }
semver = { version = "0.9", optional = true }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
serde_yaml = { version = "0.8", optional = true }
sha2 = "0.8"
tar = { version = "0.4", optional = true }
uuid = { version = "0.7", optional = true, features = ["v4"] }
yaml-rust =  { version = "0.4", optional = true }

[dev-dependencies]
rusty-fork = "0.3"
sawtooth-xo = "0.5"
serial_test = "0.3"
tempdir = "0.3"

[build-dependencies]
protoc-rust = "2.14"

[features]
default = [
    "context",
    "database-lmdb",
    "execution",
    "handler",
    "protocol-batch",
    "protocol-batch-builder",
    "protocol-transaction",
    "protocol-transaction-builder",
    "scheduler",
    "state-merkle",
]

stable = [
    # The stable feature extends default:
    "default",
    # The following features are stable:
    "contract-archive",
]

experimental = [
    # The experimental feature extends stable:
    "stable",
    # The following features are experimental:
    "contract",
    "contract-address",
    "contract-address-double-key-hash",
    "contract-address-key-hash",
    "contract-address-triple-key-hash",
    "contract-context",
    "contract-context-key-value",
    "database-lmdb",
    "database-redis",
    "database-sqlite",
    "family-command",
    "family-smallbank",
    "family-smallbank-workload",
    "family-xo",
    "key-value-state",
    "protocol-sabre-exec",
    "workload",
    "workload-batch-gen",
    "workload-runner"
]

# stable features in support of wasm
wasm = [
    # The following features are stable:
]

wasm-experimental = [
    # The experimental feature extends stable:
    "wasm",
    # The following features are experimental:
    "sabre-compat",

]

nightly = []

context = ["uuid"]
contract = []
contract-address = ["contract"]
contract-address-key-hash = ["contract-address"]
contract-address-double-key-hash = ["contract-address"]
contract-address-triple-key-hash = ["contract-address"]
contract-archive = ["bzip2", "contract", "glob", "semver", "serde", "serde_derive", "serde_yaml", "tar"]
contract-context = ["contract", "contract-address"]
contract-context-key-value = ["contract-context", "key-value-state"]
database-lmdb = ["lmdb-zero"]
database-redis = ["redis"]
database-sqlite = ["rusqlite", "r2d2", "r2d2_sqlite"]
execution = ["context", "handler", "log", "protocol-transaction", "scheduler"]
family-command = ["cylinder", "handler", "protocol-transaction-builder"]
family-smallbank = ["handler"]
family-smallbank-workload = [
  "family-smallbank",
  "protocol-sabre-exec",
  "yaml-rust",
  "workload",
  "workload-runner"
]
family-xo = ["handler", "rand_hc", "workload"]
handler = ["protocol-transaction"]
key-value-state = []
protocol-batch = ["protocol-transaction"]
protocol-batch-builder = ["cylinder", "protocol-batch"]
protocol-transaction = []
protocol-transaction-builder = ["cylinder", "protocol-transaction", "protocol-batch-builder"]
protocol-sabre-exec = []
sabre-compat = ["sabre-sdk"]
sawtooth-compat = ["sawtooth-sdk"]
scheduler = ["context", "log", "protocol-batch"]
state-merkle = ["cbor-codec", "log", "openssl"]
# This feature must be enabled to run the merkle tests using a redis db.  It is
# not enabled by default, due to its requirement of an external redis instance.
state-merkle-redis-db-tests = ["database-redis", "state-merkle"]
workload = []
workload-batch-gen = ["workload"]
workload-runner = [
  "chrono",
  "reqwest",
  "serde",
  "serde_derive",
  "workload-batch-gen"]

[package.metadata.docs.rs]
features = [
  "default",
  "nightly",
  "experimental",
  "sawtooth-compat",
  "stable",
]
