[package]
name = "sawtooth-sabre"
version = "0.1.3"
description = "Sawtooth Sabre Transaction Processor"
authors = ["Cargill Incorporated"]
build = "build.rs"
license="Apache"

[package.metadata.deb]
extended-description= """\
    Sawtooth Sabre is a transaction family which implements on-chain smart \
    contracts executed in a WebAssembly virtual machine.
"""
depends = "$auto"
assets = [
    ["packaging/systemd/sawtooth-sabre.service",
    "/lib/systemd/system/sawtooth-sabre.service", "644"],
    ["packaging/systemd/sawtooth-sabre", "/etc/default/sawtooth-sabre", "644"],
    ["target/release/sawtooth-sabre", "/usr/bin/sawtooth-sabre", "755"],
]
maintainer-scripts = "packaging/ubuntu"
conf-files = [
    "/lib/systemd/system/sawtooth-sabre.service",
    "/etc/default/sawtooth-sabre"
]

[dependencies]
sawtooth_sdk = { git = "https://github.com/hyperledger/sawtooth-core.git" }
log = "0.3.8"
simple_logger = "0.4.0"
clap = "2"
protobuf = "2"
rust-crypto = "0.2.36"
wasmi = "0.4"

[build-dependencies]
protoc-rust = "2"
