[package]
name = "sawtooth-sabre"
version = "0.4.3"
description = "Sawtooth Sabre Transaction Processor"
authors = ["Cargill Incorporated"]
license = "Apache-2.0"
edition = "2018"

[package.metadata.deb]
extended-description= """\
    Sawtooth Sabre is a transaction family which implements on-chain smart \
    contracts executed in a WebAssembly virtual machine.
"""
depends = "$auto"
assets = [
    ["packaging/systemd/sawtooth-sabre.service",
    "/lib/systemd/system/sawtooth-sabre.service", "644"],
    ["packaging/systemd/sawtooth-sabre", "/etc/default/sawtooth-sabre", "644"],
    ["target/release/sawtooth-sabre", "/usr/bin/sawtooth-sabre", "755"],
]
maintainer-scripts = "packaging/ubuntu"
conf-files = [
    "/lib/systemd/system/sawtooth-sabre.service",
    "/etc/default/sawtooth-sabre"
]

[lib]
name = "sawtooth_sabre"
path = "src/lib.rs"

[[bin]]
name = "sawtooth-sabre"
path = "src/main.rs"

[dependencies]
sawtooth-sdk = "0.3"
sabre-sdk = {path = "../sdks/rust"}
log = "0.4"
simple_logger = "1"
clap = "2"
protobuf = "2"
rust-crypto = "0.2.36"
wasmi = "0.4"

[build-dependencies]
protoc-rust = "2"
