[package]
name = "address-generator"
version = "0.1.0"
authors = ["Cargill Incorporated"]
edition = "2018"

[dependencies]
clap = "2"

[dependencies.transact]
path = "../../libtransact"
features = [
    "contract-address-double-key-hash",
    "contract-address-key-hash",
    "contract-address-triple-key-hash",
]
