# Copyright 2019 IBM Corp.
# Copyright 2020 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "simple-xo"
version = "0.1.0"
authors = ["IBM Corp.", "Cargill Incorporated"]
edition = "2018"

[dependencies]
cylinder = "0.2"
transact = { path = "../../libtransact", features = ["sawtooth-compat"] }
sawtooth-xo = "0.5"
hex = "0.3"
sha2 = "0.8"

[features]
default = []

stable = [
    # The stable feature extends default:
    "default",
    # The following features are stable:
]

experimental = [
    # The experimental feature extends stable:
    "stable",
    # The following features are experimental:
]
